--- a/app/views/bienvenido/index.html.haml
+++ b/app/views/bienvenido/index.html.haml
@@ -1,10 +1,11 @@
 %h1 Bienvenido
 = link_to "Reportes", reportes_path 
 
-%h2 Stimulus Check
+%h2 Ingrese un nombre
 
-%div data-controller="hello">
-  %input data-hello-target="name" type="text">
-  %button data-action="click->hello#greet">
-    Greet
-  %span data-hello-target="output">
+%div{:"data-controller" => "hello" }
+  %input{ :"data-hello-target" => "name", :type => "text"}
+  %button{ :"data-action" => "click->hello#greet"}
+    Hola
+  %span{ :"data-hello-target" => "output"}
+
