Obtimianzadon las erb y las rutas

--- a/app/views/bienvenido/index.html.haml
+++ b/app/views/bienvenido/index.html.haml
@@ -1,11 +1,12 @@
 %h1 Bienvenido
-= link_to "Reportes", reportes_path 
+= link_to "Electricista a Domicilio en Providencia. Chile.", reportes_path 
 
-%h2 Ingrese un nombre
+%h2 ¿Cómo se llama UD.?
 
 %div{:"data-controller" => "hello" }
   %input{ :"data-hello-target" => "name", :type => "text"}
   %button{ :"data-action" => "click->hello#greet"}
-    Hola
+    Qué es esto
   %span{ :"data-hello-target" => "output"}
+    
 
