--- a/app/views/reportes/edit.html.haml
+++ b/app/views/reportes/edit.html.haml
@@ -1,9 +1,10 @@
-%h1=Editando reporte
+%h1 Editando reporte
 
 = render "form", reporte: @reporte 
 
 %br
 
 %div
-  = link_to "Mostrar este reporte", @reporte  |
+  = link_to "Mostrar este reporte", @reporte 
+  |
   = link_to "Volver a reportes", reportes_path 
