--- a/app/views/reportes/show.html.haml
+++ b/app/views/reportes/show.html.haml
@@ -1,12 +1,14 @@
 = turbo_stream_from @reporte 
 
-%p{ :id => "notice"}=notice
+%p#notice=notice
 
 = render @reporte 
 = render "reportes/comentarios", reporte: @reporte 
 
 %div
-  = link_to "Editar este reporte", edit_reporte_path(@reporte) |
+  = link_to "Editar este reporte", edit_reporte_path(@reporte)
+  | 
   = link_to "Volver a reportes", reportes_path 
 
   = button_to "Eliminar este reporte", reporte_path(@reporte), method: :delete
+  %small Cualquiera puede eliminar este reporte
