--- a/app/views/reportes/_form.html.haml
+++ b/app/views/reportes/_form.html.haml
@@ -18,6 +18,6 @@
   #field
     = form.label :contenido 
     = form.rich_text_area :contenido 
-    %small Agregue fotos y descripciones
+    %small Agregue fotos y descripciones, ninguna dirección
   #actions
     = form.submit 
