Cambiando el greet de stimulus

--- a/app/views/reportes/_form.html.haml
+++ b/app/views/reportes/_form.html.haml
@@ -19,5 +19,8 @@
     = form.label :contenido 
     = form.rich_text_area :contenido 
     %small Agregue fotos y descripciones, ninguna dirección
+    |
+    %small Las imágenes desaparecen en minutos
+
   #actions
     = form.submit 
