--- a/app/views/reportes/show.html.haml
+++ b/app/views/reportes/show.html.haml
@@ -10,5 +10,5 @@
   | 
   = link_to "Volver a reportes", reportes_path 
 
-  = button_to "Eliminar este reporte", reporte_path(@reporte), method: :delete, data: { turbo_confirm: "¿Está seguro?" } %>
+  = button_to "Eliminar este reporte", reporte_path(@reporte), method: :delete, data: { turbo_confirm: "¿Está seguro?" } 
   %small Cualquiera puede eliminar este reporte
