--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,10 +8,8 @@
 
     = stylesheet_link_tag "application", "data-turbo-track": "reload" 
     = stylesheet_link_tag "reportes", "data-turbo-track": "reload"
-
-    <script async src="https://ga.jspm.io/npm:es-module-shims@1.8.2/dist/es-module-shims.js" data-turbo-track="reload"></script>
-
     = javascript_importmap_tags 
+    -#no se bien en mi celular. TAmpoco el sitio simplecss.org se ve bien
     %link{ :rel => "stylesheet", :href => "https://cdn.simplecss.org/simple.min.css"}
 
   %body
