--- a/app/views/reportes/index.html.haml
+++ b/app/views/reportes/index.html.haml
@@ -1,4 +1,9 @@
-%p{ :id => "notice"}= notice 
+%p#notice=notice 
+
+
+<!-- HTML !-->
+<button class="button-49" role="button">Button 49</button>
+
 
 %h1 Reportes
 
