--- a/app/views/bienvenido/index.html.haml
+++ b/app/views/bienvenido/index.html.haml
@@ -19,3 +19,6 @@
 = link_to "alectrico", "https://www.alectrico.cl/agendar"
 %small
   alectrico.cl es un sitio SEGURO. 
+
+<button class="button-49" role="button">Problema</button>
+
