--- a/app/views/reportes/_form.html.haml
+++ b/app/views/reportes/_form.html.haml
@@ -23,4 +23,6 @@
     %small Las imágenes desaparecen en minutos
 
   #actions
-    = form.submit 
+    -#<button class="button-49" role="button">Button 49</button>
+
+    %button.button-49{:role => "button",:value=>"Reportar"} reportar 
