--- a/app/views/reportes/index.html.haml
+++ b/app/views/reportes/index.html.haml
@@ -2,7 +2,7 @@
 
 
 <!-- HTML !-->
-<button class="button-49" role="button">Button 49</button>
+-#<button class="button-49" role="button">Button 49</button>
 
 
 %h1 Reportes
