--- a/app/views/reportes/new.html.haml
+++ b/app/views/reportes/new.html.haml
@@ -1,4 +1,13 @@
-%h1 Nuevo reporte
+%h1 Bienvenido
+-#= link_to "Electricista a Domicilio en Providencia. Chile.", reportes_path
+-#%small
+  -#ga este link para un llamado rápido de un electricista.
+  Este NO es un sitio seguro, y es de uso colectivo.
+  Puede haber muchas personas interactuando.
+  Puede que le borren su solicitud.
+  Ud. puede borrar las de otros.
+  
+-#%h1 Nuevo reporte
 
 = render "form", reporte: @reporte 
 
