--- a/app/views/reportes/_form.html.haml
+++ b/app/views/reportes/_form.html.haml
@@ -19,8 +19,12 @@
   #field
     = form.label :fono
     = form.text_field :fono
-    %small Cuando Ingrese el Reporte recibirá un aviso en este número. Puede cerrar
-      
+    %small Recibirá un aviso en este WhatsApp
+
+  #field
+    = form.label :nombre
+    = form.text_field :nombre
+
 
   #actions
     -#<button class="button-49" role="button">Button 49</button>
