--- a/app/views/reportes/_form.html.haml
+++ b/app/views/reportes/_form.html.haml
@@ -25,6 +25,10 @@
     = form.label :nombre
     = form.text_field :nombre
 
+  #field
+    = form.label :confirmado?
+    = form.chackbox :confirmado?
+
   %hr
   #actions
     -#<button class="button-49" role="button">Button 49</button>
