--- a/app/views/reportes/_form.html.haml
+++ b/app/views/reportes/_form.html.haml
@@ -27,7 +27,7 @@
 
   #field
     = form.label :confirmado?
-    = form.chackbox :confirmado?
+    = form.checkbox :confirmado?
 
   %hr
   #actions
