--- a/app/views/reportes/_form.html.haml
+++ b/app/views/reportes/_form.html.haml
@@ -26,8 +26,8 @@
     = form.text_field :nombre
 
   #field
-    = form.label :confirmado?
-    = form.checkbox :confirmado?
+    = form.label :confirmado
+    = form.checkbox :confirmado
 
   %hr
   #actions
