Agregando confirmado a la ventana de show

--- a/app/views/reportes/_reporte.html.haml
+++ b/app/views/reportes/_reporte.html.haml
@@ -4,6 +4,8 @@
     = reporte.nombre 
     %strong Fono:
     = reporte.fono
+    %strong Confirmado:
+    = reporte.confirmado
 
   %p
     Publicado en #{time_tag( reporte.created_at)}
