--- a/app/views/reportes/_reporte.html.haml
+++ b/app/views/reportes/_reporte.html.haml
@@ -1,3 +1,9 @@
+-#tiene que haber un turbo_frame_tag con un id del tipo reporte_id eso lo hace dom_id
+-#Si cico en edit_reporte_path
+-#en este turbo_frame_tag se reemplazará todo por la ventanda de edición
+-#eso es lo que queremos
+-#por eso en edit.html.haml
+-#también debe haber un turbo_frame_tag dom_id(reporte) do
 = turbo_frame_tag dom_id(reporte) do
   .scaffold_record{ :id => dom_id( reporte)}
     %p
