--- a/app/views/bienvenido/index.html.haml
+++ b/app/views/bienvenido/index.html.haml
@@ -1,3 +1,5 @@
+= turbo_stream_from 'reportes'
+
 .flex.items-center.justify-center.min-h-screen.bg-gray-100
   .p-6.bg-white.rounded-lg.shadow-lg.w-96
     <!--image-->
