--- a/app/views/reportes/edit.html.haml
+++ b/app/views/reportes/edit.html.haml
@@ -1,5 +1,8 @@
 %h1 Editando reporte
 
+-#este turbo frame tag_dom_id(@reporte) debe ser igual
+-#en _reporte_html.haml, porque será llamado desde alĺá
+-#y este código reemplazará al que está allá
 = turbo_frame_tag dom_id(@reporte) do
   = render "form", reporte: @reporte 
 
