--- a/app/views/reportes/_form.html.haml
+++ b/app/views/reportes/_form.html.haml
@@ -33,6 +33,7 @@
   #actions
     -#<button class="button-49" role="button">Button 49</button>
 
+    =link_to 'Cancelar', reportes_path
     %button.button-49{:role => "button",:value=>"Reportar"} reportar 
 
     -#%div{:"data-controller" => "hello" }
