--- a/app/views/reportes/_reporte.html.haml
+++ b/app/views/reportes/_reporte.html.haml
@@ -27,6 +27,10 @@
       = reporte.contenido 
 
     %p
-      = link_to "Editar este reporte", edit_reporte_path( reporte )
-      = link_to "Ver este reporte",  reporte 
+      = link_to "Ver", reporte_path( reporte ), data: { turbo_frame: "_top" }, :method => :get
+      = button_to "Borrar", reporte_path( reporte ),
+        :method => :delete,   
+        data: { turbo_confirm: "¿Está seguro?" }
+
+      = link_to "Editar", edit_reporte_path( reporte ), :method => :get
 
