--- a/app/views/reportes/_reporte.html.haml
+++ b/app/views/reportes/_reporte.html.haml
@@ -27,13 +27,18 @@
       = reporte.contenido 
 
     %p
-      = link_to "Ver", reporte_path( reporte ), data: { turbo_frame: "_top" }, :method => :get
+      = link_to "Ver", reporte_path( reporte ),
+        data: { turbo_frame: "_top", turbo: C.turbo_enabled },
+        :method => :get
       |
-      = link_to "Editar", edit_reporte_path( reporte ), :method => :get
+      = link_to "Editar", 
+        edit_reporte_path( reporte ), 
+        :method => :get
       |
-      = link_to "Listar", reportes_path, data: { turbo_frame: "_top"}
+      = link_to "Listar", reportes_path,
+        data: { turbo_frame: "_top", turbo: C.turbo_enabled }
       = button_to "Borrar", reporte_path( reporte ),
         :method => :delete,   
-        data: { turbo_confirm: "¿Está seguro?" }
+        data: { turbo_confirm: "¿Está seguro?", turbo: C.turbo_enabled }
 
 
