--- a/app/views/reportes/index.html.haml
+++ b/app/views/reportes/index.html.haml
@@ -8,7 +8,7 @@
 
 = link_to "Nuevo reporte", 
   new_reporte_path, 
-  data: { turbo_frame: dom_id( Reporte.new) }, 
+  data: { turbo_frame: dom_id( Reporte.new), turbo: C.turbo_enabled }, 
   class: "btn btn--primary" 
 
 = turbo_frame_tag Reporte.new 
