--- a/app/views/reportes/_form.html.haml
+++ b/app/views/reportes/_form.html.haml
@@ -16,7 +16,9 @@
   .field
     = form.label :contenido 
     -#form.rich_text_area :contenido 
-    = form.text_field :contenido
+    = form.text_field :contenido, :autofocus => true
+
+
     -#%small Describa brevemente. También puede agregar videos, fotos pero ninguna dirección.
     -#%small Las imágenes desaparecen en minutos
 
