--- a/app/views/reportes/_form.html.haml
+++ b/app/views/reportes/_form.html.haml
@@ -1,51 +1,6 @@
--#%h2 ¿Cómo se llama UD.?
-= form_with(model: reporte, html: {data:  { turbo: C.turbo_enabled } }) do |form| 
-  -if reporte.errors.any? 
-    -#rror_explanation
-      %h2=pluralize(reporte.errors.count, "error(es)")
-      %ul
-        -reporte.errors.each do |error| 
-          %li= error.full_message
+= simple_form_for reporte, html: { class: "reporte form" } do |f| 
+  - if reporte.errors.any? 
     .error-message
-      %hr
-      %small Hubo los siguientes errores:
       = reporte.errors.full_messages.to_sentence.capitalize 
-      %small Inténtelo nuevamente
-      %hr
-
-  .field
-    = form.label :contenido 
-    -#form.rich_text_area :contenido 
-    = form.text_field :contenido, :autofocus => true
-
-
-    -#%small Describa brevemente. También puede agregar videos, fotos pero ninguna dirección.
-    -#%small Las imágenes desaparecen en minutos
-
-
-  .field
-    = form.label :fono
-    = form.text_field :fono
-    %small Recibirá un aviso en este WhatsApp
-
-  .field
-    = form.label :nombre
-    = form.text_field :nombre
-
-  .field
-    = form.label :confirmado
-    = form.checkbox :confirmado
-
-  %hr
-  #actions
-    -#<button class="button-49" role="button">Button 49</button>
-
-    =link_to 'Cancelar', reportes_path
-    %button.button-49{:role => "button",:value=>"Reportar"} reportar 
-
-    -#%div{:"data-controller" => "hello" }
-      %input{ :"data-hello-target" => "name", :type => "text"}
-      %button{ :"data-action" => "click->hello#greet"}
-        Hola
-      %span{ :"data-hello-target" => "output"}
-
+  = f.input :nombre, input_html: { autofocus: true } 
+  .btn.btn--secondary=f.submit 
