Cambiando a application css

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
     = javascript_importmap_tags 
     %script{ :href => "https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4" }
     -#no se bien en mi celular. TAmpoco el sitio simplecss.org se ve bien
-    %link{ :rel => "stylesheet", :href => "https://cdn.simplecss.org/simple.min.css"}
+    -#    %link{ :rel => "stylesheet", :href => "https://cdn.simplecss.org/simple.min.css"}
 
   %body
 
