--- a/app/assets/stylesheets/plataforma.sass.scss
+++ b/app/assets/stylesheets/plataforma.sass.scss
@@ -8,10 +8,17 @@
 // Components
 @import "components/btn";
 @import "components/error_message";
+@import "components/flash";
+@import "components/animations";
+@import "components/navbar";
+@import "components/turbo_progress_bar";
+@import "components/reporte";
 @import "components/form";
 @import "components/visually_hidden";
-@import "components/reporte";
 
 // Layouts
 @import "layouts/container";
 @import "layouts/header";
+
+
+
