--- a/app/assets/stylesheets/components/_reporte.scss
+++ b/app/assets/stylesheets/components/_reporte.scss
@@ -1,3 +1,5 @@
+@import "mixins/media";
+
 .reporte {
   display: flex;
   justify-content: space-between;
@@ -9,6 +11,7 @@
   box-shadow: var(--shadow-small);
   margin-bottom: var(--space-m);
   padding: var(--space-xs);
+
 
   @include media(tabletAndUp) {
     padding: var(--space-xs) var(--space-m);
