--- a/app/views/bienvenido/index.html.haml
+++ b/app/views/bienvenido/index.html.haml
@@ -30,12 +30,13 @@
   %small
     alectrico.cl es un sitio SEGURO. 
 
-  <button class="button-49" role="button">Problema</button>
+  -#<button class="button-49" role="button">Problema</button>
 
+  = link_to sanitize("&larr; Volver a reportes"), reportes_path
 
   -#turbo_frame_tag 'reportes', :src => "/reportes"
 
-
+.container
   = turbo_frame_tag 'reportes' do
-    = button_to 'Reportes', reportes_path , :method => 'get'
+    .btn.btn--dark= button_to 'Reportes', reportes_path , :method => 'get'
 
