--- a/app/views/layouts/_flash.html.haml
+++ b/app/views/layouts/_flash.html.haml
@@ -1,3 +1,3 @@
 -flash.each do |flash_type, message| 
-  %div.flash__message{"data-controllers" => "removals",  "data-action" => "animationend->removals#remove"}
+  %div.flash__message{"data-controller" => "removals",  "data-action" => "animationend->removals#remove"}
     = message 
