--- a/app/views/layouts/_flash.html.haml
+++ b/app/views/layouts/_flash.html.haml
@@ -1,3 +1,4 @@
--flash.each do |flash_type, message| 
+%p flash
+-flash.each do |flash_type, message|
   %div.flash__message{"data-controller" => "removals",  "data-action" => "animationend->removals#remove"}
     = message 
