Botón de nuevo repote no paga notifiación
1. Se logra la notificación de estado vacío

--- a/app/views/reportes/_empty_state.haml
+++ b/app/views/reportes/_empty_state.haml
@@ -1,5 +1,5 @@
 .empty-state
-  .empty-state__text
+  %p.empty-state__text
     Ud. aún no tiene reportes!
 
-  .btn.btn--primary= link_to "Agregar un reporte", new_reporte_path
+  -#.btn.btn--light= link_to "Agregar un reporte", new_reporte_path
