--- a/app/views/reportes/index.html.haml
+++ b/app/views/reportes/index.html.haml
@@ -10,12 +10,13 @@
       data: { turbo_frame: dom_id( Reporte.new), turbo: C.turbo_enabled }, 
       class: "btn btn--primary" 
 
-    = turbo_frame_tag Reporte.new 
+  = turbo_frame_tag Reporte.new 
 
-  = turbo_frame_tag Reporte.new do
+  -#= turbo_frame_tag Reporte.new do
     -if @reportes.none?
       = render "reportes/empty_state"
 
   = turbo_frame_tag 'reportes' do
+    -#= render "reportes/empty_state"
     = render @reportes.ordered
 
