--- a/app/views/reportes/index.html.haml
+++ b/app/views/reportes/index.html.haml
@@ -12,7 +12,7 @@
 
 
   = turbo_frame_tag Reporte.new do
-    -#if @reportes.none?
+    -if @reportes.none?
       = render "reportes/empty_state"
 
   = turbo_frame_tag 'reportes' do
