--- a/app/views/reportes/_reporte.html.haml
+++ b/app/views/reportes/_reporte.html.haml
@@ -7,6 +7,7 @@
 
 = turbo_frame_tag dom_id(reporte) do
   .reporte{ :id => dom_id( reporte)}
+    = reporte.id
     = reporte.confirmado
     = link_to reporte.nombre,
       reporte_path(reporte),
@@ -17,6 +18,7 @@
         :method => :get     
       -#= link_to "Listar", reportes_path,
         data: { turbo_frame: "_top", turbo: C.turbo_enabled }
+
       .btn.btn--light= link_to "Editar",
         edit_reporte_path( reporte ),
         :method => :get 
